# usplasi_multicam_vo

./: .gitignore  CMakeLists.txt  package.xml
doc/: manifest.yaml
doc/html/: FeatureDetector_8cpp.html  FeatureDetector_8cpp__incl.map  FeatureDetector_8cpp__incl.md5  FeatureDetector_8cpp_source.html  FeatureDetector_8h.html  FeatureDetector_8h__dep__incl.map  FeatureDetector_8h__dep__incl.md5  FeatureDetector_8h__incl.map  FeatureDetector_8h__incl.md5  FeatureDetector_8h_source.html  FeatureMatcher_8cpp.html  FeatureMatcher_8cpp__incl.map  FeatureMatcher_8cpp__incl.md5  FeatureMatcher_8cpp_source.html  FeatureMatcher_8h.html  FeatureMatcher_8h__dep__incl.map  FeatureMatcher_8h__dep__incl.md5  FeatureMatcher_8h__incl.map  FeatureMatcher_8h__incl.md5  FeatureMatcher_8h_source.html  Feature_8cpp.html  Feature_8cpp__incl.map  Feature_8cpp__incl.md5  Feature_8cpp_source.html  Feature_8h.html  Feature_8h__dep__incl.map  Feature_8h__dep__incl.md5  Feature_8h__incl.map  Feature_8h__incl.md5  Feature_8h_source.html  Match_8cpp.html  Match_8cpp__incl.map  Match_8cpp__incl.md5  Match_8cpp_source.html  Match_8h.html  Match_8h__dep__incl.map  Match_8h__dep__incl.md5  Match_8h__incl.map  Match_8h__incl.md5  Match_8h_source.html  (+65 more)
include/multicam_vo/: Feature.h  FeatureDetector.h  FeatureMatcher.h  ISAMOptimizer.h  Match.h  MonoOdometer.h  MulticamOdometer.h  MulticamVOPipeline.h  MulticamVOSimPipeline.h  Points.h  utils.h
launch/: vo.launch  vo_sim.launch
matlab/: aa_plot_poses.m  main.m  octave-workspace  plot_00.m  plot_01.m  plot_02.m  plot_03.m  plot_04.m  plot_05.m  plot_06.m  plot_07.m  plot_08.m  plot_09.m  plot_10.m  plot_11.m  plot_12.m  plot_13.m  plot_14.m  pose_0.mat  pose_12.mat  pose_3.mat  pose_6.mat  pose_9.mat  poses.mat
param/: ROI_manualCalib.yaml  briskParams.yaml  bucketingParams.yaml  fastParams.yaml  ladybugExtrinsics.yaml  odometerParams.yaml  optimizationParams.yaml  orbParams.yaml  overlap.yaml  shiTomasiParams.yaml  trackingMatchingParams.yaml
src/: Feature.cpp  FeatureDetector.cpp  FeatureMatcher.cpp  ISAMOptimizer.cpp  Match.cpp  MonoOdometer.cpp  MulticamOdometer.cpp  MulticamVOPipeline.cpp  MulticamVOSimPipeline.cpp  Points.cpp  ceresTest.cpp  main.cpp  main_sim.cpp  utils.cpp
usplasi_multicam_vo/: CMakeLists.txt
usplasi_multicam_vo/include/multicam_vo/: Match.h  MonoOdometer5.h  MonoOdometer8.h  MulticamOdometer.h  MulticamVOPipeline.h  utils.h  vo_features.h
usplasi_multicam_vo/param/: ROI_providedCalib.yaml  odometerParams.yaml  optimizationParams.yaml  orbParams.yaml  shiTomasiParams.yaml  simVOParams.yaml  trackingMatchingParams.yaml
usplasi_multicam_vo/src/: Match.cpp  MonoOdometer5.cpp  MonoOdometer8.cpp  MulticamOdometer.cpp  MulticamVOPipeline.cpp  main.cpp  utils.cpp
